src/main/default/objects/Trigger_Object__mdt/Trigger_Object__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Object</label>
    <pluralLabel>Trigger Objects</pluralLabel>
</CustomObject>