src/main/default/objects/Trigger_Object__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, will disable all handlers for any trigger using this framework. This applies to legacy implementations as well.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>