src/main/default/objects/Trigger_Object__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>API name of trigger object</description>
    <inlineHelpText>API name of trigger object</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>