src/main/default/objects/Trigger_Object__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Use this field to store the custom object name. Cannot use the standard MDT Name field since you cannot put a double underscore for a &quot;CustomObject__c&quot;.</description>
    <inlineHelpText>Use this field to store the custom object name. Cannot use the standard MDT Name field since you cannot put a double underscore for a &quot;CustomObject__c&quot;.

Standard Label and Name fields are required by default, but only used for labeling.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>