src/main/default/objects/Trigger_Object__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>